[package]
name = "render_engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.29.15"
env_logger = "0.10"
log = "0.4"
wgpu = "0.19.3"
futures = "0.3"
bytemuck = { version = "1.12", features = [ "derive" ] }
egui = "0.27.1"
cgmath = "0.18.0"
rand = "0.8.0"